<resources>
    <string name="app_name">EZCartApp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="signup"><u>SignUp</u></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest Login</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_view_cart">View Cart</string>
    <string name="menu_your_order">Your Order</string>
    <string name="menu_feedback">FeedBack</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Log Out</string>
    <string name="_100">$100</string>
    <string name="rate_now">Rate Now</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="orders_for_october">Orders For October</string>
    <string name="hay_no_delivery_charges_on_this_order">Hay! No Delivery Charges on this order</string>


</resources>